--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,19 @@
 language: node_js
+
 node_js:
   - "7"
   - "8"
+
+cache:
+  directories:
+    - node_modules
+
+install:
+  - npm install
+
+scripts:
+  - npm run lint
+  - npm run test
+
+after_success:
+  - npm run coveralls
