Updated some modules and updated .npmignore

--- a/.npmignore
+++ b/.npmignore
@@ -5,6 +5,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Coverage directory used by tools like istanbul
+coverage
+.nyc_output
+
 # Misc
 .git/
 .gitignore
